<resources>
    <string name="app_name">Sync countdowns</string>
    <string name="go">Go !</string>
    <string name="notification_time">Notification Time</string>
    <string name="title_go_confirmation">Launch countdown</string>
    <string name="message_go_confirmation">Cancel all active countdowns and launch them again ?</string>
    <string name="ok_go_confirmation">Go !</string>
    <string name="utils_time_format">hh:mm a</string>
    <string name="title_notification_time_picker">Time of the notifications</string>
    <string name="title_countdown_label">Label</string>
    <string name="title_countdown_delay">Delay (days) before 1st notification</string>
    <string name="title_countdown_duration">Number of days to notify</string>
    <string name="save_countdownitem_error">Error during countdown save</string>
    <string name="ok">OK</string>
    <string name="title_create_countdown_item">New countdown</string>
    <string name="no">No thanks</string>
    <string name="title_countdown_delete_confirmation">Delete countdown</string>
    <string name="message_countdown_delete_confirmation">Delete this countdown ?</string>
    <string name="utils_date_format">yyyy/MM/dd</string>
    <string name="lastlaunch_label">Last launch:</string>
    <string name="lastlaunch_never">Never</string>
    <string name="notification_day">Day %1$d/%2$d</string>
    <string name="countdown_launched">Countdowns launched !</string>
    <string name="countdown_updated">Countdowns updated (new notification time) !</string>
    <string name="countdown_cancelled">Countdowns cancelled !</string>
    <string name="title_cancel_confirmation">Cancel countdowns</string>
    <string name="message_cancel_confirmation">Cancel all active countdowns ?</string>
    <string name="ok_cancel_confirmation">Cancel all !</string>
    <string name="cancel">Cancel all !</string>
    <string name="notification_updated" >Notification time will be updated after next countdown re-launch</string>
</resources>
