<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:background="@color/colorPrimary"
    android:padding="5dp">

    <TextView
        android:id="@+id/title_countdown_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:text="@string/title_countdown_label"
        android:textColor="@android:color/white"
        app:layout_marginRightPercent="2%"
        app:layout_widthPercent="48%" />

    <TextView
        android:id="@+id/title_countdown_delay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/title_countdown_label"
        android:gravity="center"
        android:text="@string/title_countdown_delay"
        android:textColor="@android:color/white"
        app:layout_marginRightPercent="2%"
        app:layout_widthPercent="17%" />

    <TextView
        android:id="@+id/title_countdown_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/title_countdown_delay"
        android:gravity="center"
        android:text="@string/title_countdown_duration"
        android:textColor="@android:color/white"
        app:layout_widthPercent="17%" />

</android.support.percent.PercentRelativeLayout>